# beava

./: .dockerignore  .gitignore  BLOG-PART1-DRAFT.md  BLOG-PART2-DRAFT.md  BLOG-PART3-DRAFT.md  BLOG-SERIES-PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN-V2.md  Dockerfile  GOVERNANCE.md  LAUNCH-COPY-CONVERSATION.md  LAUNCH.md  LICENSE  LOGO_PROMPT.md  MAINTAINERS.md  README.md  RELEASING.md  SECURITY.md  SEMANTICS.md  SENDO-DEMO-VI.md  SENDO-DEMO.md  SENDO-FARM-DEMO-PLAN.md  SOURCE-OF-TRUTH.md  TODOS.md  UNSAFE.md  beava.example.yaml  demo.py  deny.toml  docker-compose.yml  mkdocs.yml  realtime-pain-points.docx  realtime-pain-points.md  render.yaml  tally.snapshot.base.0000000001  tally.snapshot.base.0000000003  tally.snapshot.base.0000000004  (+12 more)
crates/beava-bench/: Cargo.toml  README.md
crates/beava-bench/benches/: blast_shape_bench.rs  cli_dispatch.rs
crates/beava-bench/configs/: fraud-team.json  geo.json  large-with-sketches.json  large.json  large_phase9.json  medium-with-sketches.json  medium.json  medium_phase9.json  phase8.json  small.json
crates/beava-bench/scripts/: run_19_1_rebaseline.sh
crates/beava-bench/src/: blast_shape.rs  lib.rs  main.rs
crates/beava-bench/tests/: bench_v18_blast_smoke.rs  bench_wallclock_capture_order.rs  blast_shape_test.rs  cli_smoke.rs  estimator_smoke.rs  fraud_team_validates_against_agg_op_descriptor.rs  parallel_flag_removed.rs  parallel_wired_through.rs  rebaseline_19_1_section_present.rs  sustained_mode_terminates.rs  v18_smoke.rs  workload_smoke.rs
crates/beava-core/: Cargo.toml
crates/beava-core/benches/: apply_path_bench.rs  phase10_sketches.rs  phase10_topk.rs  phase11_buffer_geo.rs  phase4_expr.rs  phase5_agg.rs  phase8_agg.rs  phase9_decay_velocity.rs  temporal_mvcc.rs  windowed_op_init.rs
crates/beava-core/src/: agg_apply.rs  agg_buffer.rs  agg_compile.rs  agg_descriptor.rs  agg_geo.rs  agg_op.rs  agg_schema.rs  agg_state.rs  agg_state_decay.rs  agg_state_table.rs  agg_state_velocity.rs  agg_where.rs  agg_windowed.rs  bincode_safe_json.rs  config.rs  defaults.rs  eval.rs  expr.rs  expr_builtins.rs  lib.rs  op_chain.rs  op_node.rs  register_validate.rs  registry.rs  registry_diff.rs  row.rs  schema.rs  schema_propagate.rs  snapshot_body.rs  temporal.rs  wire.rs
crates/beava-core/tests/: agg_combinations_matrix.rs  cluster_dispatch.rs  entity_key_hybrid.rs  entropy_max_categories.rs  event_descriptor_cold_after.rs  event_type_mix_optimization.rs  field_idx_resolution.rs  field_ordering_invariant.rs  geo_field_idx_resolution.rs  hasher_optimization.rs  op_lifetime_bounds.rs  op_removal.rs  per_entity_size_dump.rs  phase13_4_op_renames.rs  snapshot_body_roundtrip.rs  snapshot_lock_hold_repro.rs  uddsketch_sorted_vec.proptest-regressions  uddsketch_sorted_vec.rs  windowed_op_uses_caller_pre_val.rs
crates/beava-persistence/: Cargo.toml
crates/beava-persistence/benches/: phase6_1_periodic.rs  phase6_wal.rs  phase7_snapshot_recovery.rs
crates/beava-persistence/src/: error.rs  fsync_worker.rs  lib.rs  reader.rs  record.rs  rotation.rs  segment.rs  snapshot.rs  snapshot_header.rs  writer.rs
crates/beava-persistence/tests/: fsync_non_blocking.rs  fsync_worker.rs  rotation.rs  snapshot_roundtrip.rs  sync_mode.rs  writer_orphan_segment.rs  writer_reader.rs
crates/beava-runtime-core/: Cargo.toml
crates/beava-runtime-core/benches/: body_to_row_variants.rs  parse_envelope_bench.rs
crates/beava-runtime-core/src/: bytes_pool.rs  client.rs  config.rs  event_loop.rs  http_listener.rs  io_pool.rs  io_thread.rs  io_thread_worker.rs  lib.rs  response.rs  router.rs  tcp_listener.rs  wal_buffer.rs  wal_lsn.rs  wal_writer.rs  wire_request.rs  work_ring.rs
crates/beava-runtime-core/tests/: event_loop_smoke.rs  http_body_cap.rs  io_backend_trait_test.rs  io_threads_read_test.rs  io_threads_write_test.rs  io_uring_smoke_test.rs  phase13_4_batch_get_frame.rs  phase13_4_verb_routes.rs  spsc_ring_smoke.rs
crates/beava-server/: Cargo.toml
python/: README.md  pyproject.toml  tally
python-native/: Cargo.toml  README.md  pyproject.toml
python-native/src/: errors.rs  lib.rs  pipeline.rs
python-native/tests/: conftest.py  test_pipeline_errors.py  test_pipeline_unit.py
python/beava/: __init__.py  _agg.py  _agg_ops.py  _aggregation.py  _app.py  _cli.py  _client.py  _col.py  _dag.py  _demo.py  _describe.py  _embed.py  _errors.py  _eval_reference.py  _events.py  _fork.py  _join.py  _operators.py  _protocol.py  _retry.py  _schema.py  _schema_compile.py  _schema_v0.py  _serialize.py  _stateless_ops.py  _stream.py  _table.py  _tables.py  _transport.py  _types.py  _types_core.py  _union.py  _validate.py  _validate_v0.py  _wire.py
python/benches/: _configs.py  blast.py  blast_shape.py  read_bench.py  read_bench_tcp.py
python/tally/: __init__.py  _agg_ops.py  _aggregation.py  _app.py  _cli.py  _client.py  _dag.py  _dataframe.py  _dataset.py  _expr.py  _fork.py  _join.py  _operators.py  _protocol.py  _schema.py  _schema_v0.py  _source.py  _stateless_ops.py  _stream.py  _table.py  _types.py  _union.py  _validate.py  _validate_v0.py  _view.py
python/tests/: bench_register_compile.py  conftest.py  test_admin_sidecar.py  test_agg.py  test_app.py  test_cli_and_examples.py  test_client.py  test_col.py  test_col_overload_server_acceptance.py  test_cold_after_ttl_eviction.py  test_dataframe.py  test_dataset.py  test_dataset_behaviors.py  test_decay_velocity.py  test_embed.py  test_error_response_codes.py  test_errors.py  test_eval_reference.py  test_events.py  test_expr.py  test_fork_unit.py  test_get_multi_e2e.py  test_integration.py  test_new_api.py  test_op_roundtrips_extended.py  test_op_roundtrips_synthetic_fields.py  test_operators.py  test_package_init.py  test_payload_bounds.py  test_phase12_7_no_table_surface.py  test_phase12_8_cold_after_decorator.py  test_phase12_8_op_lifetime_bounds.py  test_phase18_07_upsert_delete.py  test_phase18_09_sdk_msgpack.py  test_phase3_smoke.py  test_phase4_smoke.py  test_phase5_smoke.py  test_protocol.py  test_push_table_e2e.py  test_register_force_matrix.py  (+40 more)
(+2965 files in other folders)
