[workspace]
resolver = "2"
members = [
  "crates/beava-core",
  "crates/beava-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/petrpan26/tally"
rust-version = "1.75"

[workspace.dependencies]
# Shared deps pinned here so every crate uses the same version.
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
once_cell = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "signal", "time", "sync", "io-util"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tower = { version = "0.5", default-features = false }
serde_json = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
libc = "0.2"
parking_lot = "0.12"
proptest = "1"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["rt"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false
incremental = false

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true  # keep symbols for flamegraphs in later phases
