[workspace]
resolver = "2"
members = [
  "crates/beava-core",
  "crates/beava-persistence",
  "crates/beava-server",
  "crates/beava-bench",
  "crates/beava-runtime-core",
]

[workspace.package]
version = "0.0.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/beava-dev/beava"
rust-version = "1.75"

[workspace.dependencies]
# Shared deps pinned here so every crate uses the same version.
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
once_cell = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "signal", "time", "sync", "io-util"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tower = { version = "0.5", default-features = false }
serde_json = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
libc = "0.2"
parking_lot = "0.12"
proptest = "1"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["rt"] }
bincode = "1.3"
hdrhistogram = { version = "7.5", default-features = false }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
sysinfo = { version = "0.30", default-features = false }
futures = "0.3"
# Phase 11 (D-02): great-circle distance for geo operators (geo_velocity,
# geo_distance, geo_spread, distance_from_home). Pure-Rust, ~20-line formula,
# no transitive deps.
haversine = "0.2"
mio = { version = "1", features = ["os-poll", "net"] }
rmp-serde = "1"
# Plan 18-10: rmp::decode primitives for hand-rolled msgpack envelope scanner.
# Promoted from transitive dep of rmp-serde. Used in beava-runtime-core/tcp_listener.rs
# to bypass serde overhead on the hot path.
rmp = "0.8"
# Plan 18-11: hot-path optimization deps (Row variant D + AggStateTable HashMap).
# - compact_str: SSO string (≤24 bytes inline) for Value::Str + Row keys.
# - smallvec: inline-storage Vec for Row.0 (8 elems) + EntityKey (2 elems).
# - fxhash: non-cryptographic hasher for AggStateTable HashMap (single-process,
#   no DoS resistance needed; ~3× faster than SipHasher on short keys).
# - hashbrown: provides raw_entry_mut on stable Rust (std::HashMap's
#   raw_entry_mut is unstable). Used for clone-free key-lookup on the agg hot path.
compact_str = { version = "0.8", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }
fxhash = "0.2"
hashbrown = { version = "0.15", features = ["serde", "raw-entry"] }
# Phase 13.5 Plan 08: bench CLI dev-deps + humantime parsing.
humantime = "2"
inquire = "0.7"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false
incremental = false

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true  # keep symbols for flamegraphs in later phases
