[package]
name = "tally-native"
version = "0.1.0"
edition = "2021"
description = "PyO3 native extension exposing tally.Pipeline for local replica clients"
license = "Apache-2.0"

[lib]
# The produced shared object is named `_native.so` so it drops into the
# installed `tally/` Python package as the `tally._native` submodule.
name = "_native"
crate-type = ["cdylib"]

[dependencies]
# abi3-py310 = one wheel for Python 3.10+. `extension-module` avoids linking libpython
# at build time, which is what lets us compile on systems without Python.h headers.
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }

# Main tally crate, pulled in with only the client feature (Phase 28 D-A1 split).
tally = { path = "..", default-features = false, features = ["client"] }

# Tokio runtime for driving async run_clone synchronously from sync Python callsites.
tokio = { version = "1.50", features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "time"] }

# serde_json for surfacing SerializableEntityState -> Python dict via pythonize.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pythonize = "0.22"

thiserror = "2.0"
