[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tally"
version = "0.1.0"
description = "Tally Python SDK + native replica client (PyO3)"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]

# Preserve the existing CLI entrypoint from python/pyproject.toml so maturin-built
# wheels still ship `tally` on PATH.
[project.scripts]
tally = "tally._cli:main"

[tool.maturin]
module-name = "tally._native"
# Bundle the existing hand-written Python package from ../python/ alongside the
# compiled _native.so. The resulting wheel contains both pure-Python modules and
# the native extension under a single `tally/` package.
python-source = "python_src"
features = ["pyo3/extension-module"]
strip = true
