[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beava"
version = "0.3.0"
requires-python = ">=3.10"
description = "Python SDK for Beava: real-time feature server with composable streaming pipelines."
readme = "../README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Hoang Phan", email = "phan.minhhoang2606@gmail.com" }]
keywords = ["streaming", "real-time", "feature-store", "rust", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.27,<1"]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.5,<1", "mypy>=1.10,<2", "hypothesis>=6", "pytest-benchmark>=4,<5"]

[project.urls]
Homepage = "https://beava.dev"
Repository = "https://github.com/petrpan26/beava"
Issues = "https://github.com/petrpan26/beava/issues"

[tool.hatch.build.targets.wheel]
packages = ["beava"]
# D-08 (Phase 19): benches/ is a developer tool, never shipped via pip.
# `packages = ["beava"]` already restricts the wheel root to the beava package,
# but the explicit exclude is belt-and-suspenders + matches CONTEXT.md D-08
# language verbatim ("excluded from the pip wheel via [tool.hatch.build.targets.wheel]
# exclude rules"). Same treatment for tests/ to keep the wheel slim.
exclude = [
    "benches/**",
    "tests/**",
]

[tool.pytest.ini_options]
testpaths = ["tests", "tests/bench"]
addopts = "-ra --strict-markers"
markers = [
    "phase4: Phase 4 Python acceptance smoke tests (SC1-SC5)",
    "phase5: Phase 5 Python acceptance smoke tests (SC1-SC6)",
    "bench: pytest-benchmark perf baseline tests (Phase 5.5)",
    "phase19: Phase 19 1M-event blast bench tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
