[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "beava"
version = "0.0.0"
requires-python = ">=3.10"
description = "Beava: real-time feature server with composable streaming pipelines (Python SDK + bundled Rust server binary)."
# Maturin's sdist refuses `..` paths (different from hatchling), so we
# point at the python/-local README. The SDK-scoped tone is also the
# right shape for the PyPI long_description; root README.md targets
# repo-level readers.
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Hoang Phan", email = "phan.minhhoang2606@gmail.com" }]
keywords = ["streaming", "real-time", "feature-store", "rust", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.27,<1"]

# `[project.scripts]` is intentionally absent: the `beava` shell command
# is the maturin-bundled Rust binary itself (lands in the wheel's
# `<sysconfig.get_path("scripts")>/beava` directory). The legacy
# `beava._cli:main` shim still ships as a Python module and remains
# invokable via `python -m beava._cli` for the rare case where a user
# wants the Python-level dispatch logic.

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.5,<1", "mypy>=1.10,<2", "hypothesis>=6", "pytest-benchmark>=4,<5"]

[project.urls]
Homepage = "https://beava.dev"
Repository = "https://github.com/beava-dev/beava"
Issues = "https://github.com/beava-dev/beava/issues"

[tool.maturin]
# python-source = "." means pyproject.toml's directory (python/) is the
# Python package root; maturin auto-discovers `beava/` underneath it.
python-source = "."
# Override maturin's default module-name derivation. Without this maturin
# infers the module name from the Cargo crate (`beava-server` → `beava_server`)
# and looks for `python/beava_server/`, which doesn't exist — our Python
# package directory is `python/beava/` (project name = "beava", crate name
# = "beava-server" — they intentionally differ).
module-name = "beava"
# Workspace-aware path to the binary crate. Cargo.lock is resolved at
# the workspace root (../Cargo.toml), which maturin walks up to find.
manifest-path = "../crates/beava-server/Cargo.toml"
# Binary mode (not C-extension): builds the listed Rust binaries and
# ships them in the wheel's scripts/ dir, polars/ruff/uv style.
bindings = "bin"
# Wheel filtering note: maturin 1.13.x has no pyproject-level filter to
# pick a subset of bins from a multi-bin crate. The dev-only `log_probe`
# binary is gated behind `--features dev-tools` in `crates/beava-server/
# Cargo.toml` (`required-features = ["dev-tools"]`); `pip install`
# triggers a default-features build, so log_probe is not compiled and
# does not land in the wheel. CI runs `--features testing,dev-tools`
# to keep its coverage.
# Strip debug symbols from the wheel binary — keeps wheel size near
# ~3.5 MB on macOS arm64; debug builds remain available via
# `cargo build` in dev.
strip = true
# Demo dataset JSON / JSONL files live inside the `beava.demos`
# package but aren't .py modules; explicit include guarantees they
# ship in both sdist and wheel regardless of maturin auto-discovery
# rules. Matches the prior hatchling `force-include` behavior.
include = [
    { path = "beava/demos/**/*.json", format = ["sdist", "wheel"] },
    { path = "beava/demos/**/*.jsonl", format = ["sdist", "wheel"] },
]
# Exclude developer-only paths from sdist + wheel (D-08, Phase 19).
exclude = [
    { path = "benches/**", format = ["sdist", "wheel"] },
    { path = "tests/**", format = ["sdist", "wheel"] },
]

[tool.pytest.ini_options]
# v0 acceptance suite — 100 canonical tests covering the public Python SDK
# surface (push, get, batch_get, register, decorators, operators). Default
# `pytest` from project root runs this suite; CI gates against it.
#
# Other directories (tests/internal/, tests/bench/, tests/integration/,
# tests/conformance/) hold legacy / deep-dive tests that pre-date the
# Phase 13.5.1 SDK rewrite and have known drift; run explicitly via e.g.
# `pytest python/tests/internal/` if you want to dig in. Cleanup of these
# is v0.0.x backlog.
testpaths = ["tests/v0"]
addopts = "-ra --strict-markers"
markers = [
    "phase4: Phase 4 Python acceptance smoke tests (SC1-SC5)",
    "phase5: Phase 5 Python acceptance smoke tests (SC1-SC6)",
    "bench: pytest-benchmark perf baseline tests (Phase 5.5)",
    "phase19: Phase 19 1M-event blast bench tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "msgpack"
ignore_missing_imports = true
