[package]
name = "beava-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for Beava v2 — domain types, operators, state. Shared across server binary and future tools."

[lib]
name = "beava_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
ahash = "0.8"
ordered-float = { version = "4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "phase4_expr"
harness = false

[[bench]]
name = "phase5_agg"
harness = false

[[bench]]
name = "phase10_topk"
harness = false

[[bench]]
name = "phase10_sketches"
harness = false
