[package]
name = "beava-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for Beava v2 — domain types, operators, state. Shared across server binary and future tools."

[lib]
name = "beava_core"
path = "src/lib.rs"

[features]
# Plan 19.2-01: expose Row::get call counter for integration tests that verify
# the apply-loop uses pre-extraction. Enable via `--features test-utils` on the
# test binary; never enabled in production builds.
test-utils = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
ahash = "0.8"
ordered-float = { version = "4", features = ["serde"] }
# Phase 11 geo operators: great-circle distance.
haversine = { workspace = true }
# Plan 18-11: hot-path optimization (Row variant D + AggStateTable HashMap).
compact_str = { workspace = true }
smallvec = { workspace = true }
fxhash = { workspace = true }
hashbrown = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "phase4_expr"
harness = false

[[bench]]
name = "phase5_agg"
harness = false

[[bench]]
name = "phase8_agg"
harness = false

[[bench]]
name = "phase9_decay_velocity"
harness = false

[[bench]]
name = "phase10_topk"
harness = false

[[bench]]
name = "phase10_sketches"
harness = false

[[bench]]
name = "phase11_buffer_geo"
harness = false

[[bench]]
name = "windowed_op_init"
harness = false

[[bench]]
name = "apply_path_bench"
harness = false

[[test]]
name = "field_idx_resolution"
path = "tests/field_idx_resolution.rs"
required-features = ["test-utils"]

[[test]]
name = "cluster_dispatch"
path = "tests/cluster_dispatch.rs"
required-features = ["test-utils"]

[[test]]
name = "event_type_mix_optimization"
path = "tests/event_type_mix_optimization.rs"
required-features = ["test-utils"]
