[package]
name = "beava-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Beava v2 persistence — WAL + snapshot (syscall-bearing, outside beava-core)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
crc32c = "0.6"
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
crc32c = "0.6"
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "io-util"] }
criterion = { workspace = true }

[[bench]]
name = "phase6_wal"
harness = false
