[package]
name = "beava-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Beava v2 persistence — WAL + snapshot (syscall-bearing, outside beava-core)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
crc32c = "0.6"
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
crc32c = "0.6"
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "io-util"] }
criterion = { workspace = true }
beava-core = { path = "../beava-core" }
serde_json = { workspace = true }
# Required by `phase7_snapshot_recovery` bench to construct `EntityKey`.
compact_str = { workspace = true }
smallvec = { workspace = true }

[[bench]]
name = "phase6_wal"
harness = false

[[bench]]
name = "phase7_snapshot_recovery"
harness = false

[[bench]]
name = "phase6_1_periodic"
harness = false
