[package]
name = "beava-runtime-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hand-rolled mio-based event loop for Beava's TCP + HTTP data-plane (Phase 18)."

[features]
default = []

[dependencies]
beava-core = { path = "../beava-core" }
mio = { version = "1", features = ["os-poll", "net"] }
bytes = { workspace = true }
httparse = "1.10"
crossbeam-channel = "0.5"
serde_json = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
# Plan 18-10: rmp::decode primitives for hand-rolled msgpack envelope scanner
# in tcp_listener.rs (no serde overhead on the hot path).
rmp = { workspace = true }
# Plan 18-10: sonic-rs LazyValue for zero-copy JSON envelope parsing in
# tcp_listener.rs. Used to bypass serde_json::Value allocation on the hot path.
sonic-rs = "0.5"
thiserror = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
num_cpus = "1"

[dev-dependencies]
