[package]
name = "beava-runtime-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hand-rolled mio-based event loop for Beava's TCP + HTTP data-plane (Phase 18)."

[features]
default = []

[dependencies]
beava-core = { path = "../beava-core" }
mio = { version = "1", features = ["os-poll", "net"] }
bytes = { workspace = true }
httparse = "1.10"
crossbeam-channel = "0.5"
# Plan 18-13: lock-free SPSC ring buffer between IoPool worker threads and
# the apply thread. ~10-30 ns push/pop overhead (vs ~80 ns crossbeam-channel),
# cache-line padded heads/tails. Replaces the per-tick join_all spin barrier
# in serve_with_dirs() with continuous event flow.
rtrb = "0.3"
serde_json = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
# Plan 18-10: rmp::decode primitives for hand-rolled msgpack envelope scanner
# in tcp_listener.rs (no serde overhead on the hot path).
rmp = { workspace = true }
# Plan 18-10: sonic-rs LazyValue for zero-copy JSON envelope parsing in
# tcp_listener.rs. Used to bypass serde_json::Value allocation on the hot path.
sonic-rs = "0.5"
thiserror = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
num_cpus = "1"

[dev-dependencies]
criterion = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = "0.5"
beava-core = { path = "../beava-core" }
# Plan 18-11: SSO string + inline-storage deps (used by Row variant D in beava-core; bench-only here)
compact_str = { workspace = true }
smallvec = { workspace = true }

[[test]]
name = "io_backend_trait_test"
path = "tests/io_backend_trait_test.rs"

[[bench]]
name = "parse_envelope_bench"
harness = false

[[bench]]
name = "body_to_row_variants"
harness = false
