[package]
name = "beava-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Beava v2 server — single-binary real-time feature server (fraud, ad-tech, analytics)."

[features]
default = []
testing = ["dep:reqwest"]

[[bin]]
name = "beava"
path = "src/main.rs"

[[bin]]
name = "log_probe"
path = "src/bin/log_probe.rs"
required-features = []

[[test]]
name = "foundation_smoke"
path = "tests/foundation_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase2_smoke"
path = "tests/phase2_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase2_5_smoke"
path = "tests/phase2_5_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase4_smoke"
path = "tests/phase4_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase5_smoke"
path = "tests/phase5_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase5_5_harness_smoke"
path = "tests/phase5_5_harness_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase5_5_baselines_smoke"
path = "tests/phase5_5_baselines_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase6_push"
path = "tests/phase6_push.rs"
required-features = ["testing"]

[[test]]
name = "phase6_crash"
path = "tests/phase6_crash.rs"
required-features = ["testing"]

[[test]]
name = "phase6_smoke"
path = "tests/phase6_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase7_smoke"
path = "tests/phase7_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase7_5_test_server_reproducer"
path = "tests/phase7_5_test_server_reproducer.rs"
required-features = ["testing"]

[[test]]
name = "phase7_restart_cycle"
path = "tests/phase7_restart_cycle.rs"
required-features = ["testing"]

[[test]]
name = "phase18_01_glue"
path = "tests/phase18_01_glue.rs"
required-features = ["testing"]

[[test]]
name = "phase18_01_bind_v18"
path = "tests/phase18_01_bind_v18.rs"
required-features = ["testing"]

[[test]]
name = "phase18_01_samply_gate"
path = "tests/phase18_01_samply_gate.rs"

[[test]]
name = "phase18_02_durability_watermarks_test"
path = "tests/phase18_02_durability_watermarks_test.rs"

[[test]]
name = "phase18_02_pingpong_test"
path = "tests/phase18_02_pingpong_test.rs"

[[test]]
name = "phase18_02_inline_wal_test"
path = "tests/phase18_02_inline_wal_test.rs"

[[test]]
name = "phase18_07_no_tokio_dataplane_test"
path = "tests/phase18_07_no_tokio_dataplane_test.rs"

[[test]]
name = "phase18_07_push_and_get_test"
path = "tests/phase18_07_push_and_get_test.rs"
required-features = ["testing"]

[[test]]
name = "phase18_07_upsert_delete_rename_test"
path = "tests/phase18_07_upsert_delete_rename_test.rs"
required-features = ["testing"]

[[test]]
name = "phase18_04_6_integration_test"
path = "tests/phase18_04_6_integration_test.rs"
required-features = ["testing"]

[[bin]]
name = "phase6_crash_probe"
path = "src/bin/phase6_crash_probe.rs"

[lib]
name = "beava_server"
path = "src/lib.rs"

[dependencies]
beava-core = { path = "../beava-core" }
beava-persistence = { path = "../beava-persistence" }
beava-runtime-core = { path = "../beava-runtime-core" }
mio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = "0.5"
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
bincode = { workspace = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
beava-runtime-core = { path = "../beava-runtime-core" }
tempfile = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net", "signal", "time", "sync", "test-util"] }
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "phase25_wire"
harness = false
